logs/Slang/chapter-6/6.19--enum_xx_inv_order.sv.log
name: enum_xx_inv_order
description: unassigned name following enum with x tests
should_fail: 1
tags: 6.19
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19--enum_xx_inv_order.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.19--enum_xx_inv_order.sv:8:35: error: cannot increment previous value 32'sbxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx because it has unknown bits
	enum integer {a=0, b={32{1'bx}}, c} val;
	                     ~~~~~~~~~~  ^
